# agent-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
skills/add-skill/: SKILL.md
skills/add-skill/references/: design-guide.md
skills/add-skill/scripts/: init_skill.py
skills/feature-doc/: SKILL.md
skills/feature-doc/assets/: FEATURE_TEMPLATE.md
skills/gitingest/: SKILL.md
skills/ios-feature-doc/: SKILL.md
skills/repo-security-review/: SKILL.md
skills/repo-security-review/references/: audit-checklist.md  red-flags.md
skills/uv-manager/: SKILL.md
tests/: conftest.py
tests/integration/: test_plugin.py
tests/unit/: test_skills.py
