[project]
name = "agent-skills"
version = "1.0.0"
description = "A collection of Claude Code skills for modern Python development and agentic workflows"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "danilotpnta", url = "https://github.com/danilotpnta"}
]
keywords = ["claude-code", "skills", "python", "uv", "workflows"]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.4.0",
]

[project.urls]
Homepage = "https://github.com/danilotpnta/agent-skills"
Repository = "https://github.com/danilotpnta/agent-skills"
Issues = "https://github.com/danilotpnta/agent-skills/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["skills"]
branch = true
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
fail_under = 70
show_missing = true

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.1.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.7",
]
